[add] settings files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mustii-landii",
-  "description": "Mustii - Produit - Landii",
+  "name": "maureen",
+  "description": "Maureen - Landing",
   "dependencies": {
     "aos": "^2.3.4",
     "jquery": "^3.5.1",
